[gd_scene load_steps=4 format=3 uid="uid://c2cvll7ctu25a"]

[ext_resource type="Script" path="res://menu.gd" id="1_ufmj0"]
[ext_resource type="Script" path="res://buttons.gd" id="2_4y3y1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4clx"]
bg_color = Color(0.151276, 0.151276, 0.151276, 1)
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="CanvasLayer" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_ufmj0")

[node name="ColorRect3" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.1209, 0.127877, 0.13, 1)

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 69.0
theme_override_styles/panel = SubResource("StyleBoxFlat_y4clx")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 861.0
offset_right = 1121.0
offset_bottom = 69.0
text = "editor"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_top = 86.0
offset_right = 1153.0
offset_bottom = 86.0

[node name="Control" type="Control" parent="ScrollContainer" node_paths=PackedStringArray("scroll_container")]
layout_mode = 2
script = ExtResource("2_4y3y1")
scroll_container = NodePath("..")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
size = Vector2i(350, 180)
always_on_top = true
popup_window = true
force_native = true
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.minapak")
use_native_dialog = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "Import status"
initial_position = 2
size = Vector2i(367, 100)
unresizable = true
always_on_top = true
popup_window = true
dialog_text = "Something went very Very wrong...."

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
top_level = true
offset_left = 1152.0
offset_top = -399.0
offset_right = 3593.0
offset_bottom = 1208.0
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="add_songs_pressed" from="ScrollContainer/Control" to="." method="_on_control_add_songs_pressed"]
[connection signal="button_slide_finished" from="ScrollContainer/Control" to="." method="_on_control_button_slide_finished"]
[connection signal="button_slide_start" from="ScrollContainer/Control" to="." method="_on_control_button_slide_start"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_file_dialog_files_selected"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
